# TFM_MIAR

./: .gitignore
Formatos/Latex/: main.tex  make.sh  makefile
Formatos/Microsoft/: Plantilla_TFM_MIAR.docx  (+2 more)
Informe/: bibliografia.bib  main.tex  make.sh  makefile
Propuesta/: .env.example  Dockerfile  Propuesta.md  README.md  docker-compose.yml  pyproject.toml
Propuesta/docs/: api_contract.md  architecture.md  design_decisions.md  future_work_predictive_model.md  integration_checklist.md  requirements.md  rule_base.md  ui_capture_plan.md
Propuesta/frontend/: Dockerfile  index.html  package.json  vite.config.js
Propuesta/frontend/src/: App.vue  styles.css
Propuesta/frontend/src/components/: ChartPanel.vue
Propuesta/frontend/src/services/: api.js
Propuesta/scripts/: start-services.sh
Propuesta/src/aqrisk/: __init__.py  config.py
Propuesta/src/aqrisk/alerting/: __init__.py  service.py
Propuesta/src/aqrisk/api/: __init__.py  server.py
Propuesta/src/aqrisk/application/: pipeline.py  scenarios.py
Propuesta/src/aqrisk/aqi/: __init__.py  epa.py
Propuesta/src/aqrisk/domain/: models.py
Propuesta/src/aqrisk/fuzzy/: __init__.py  mamdani.py  membership.py
Propuesta/src/aqrisk/ingestion/: openaq_client.py
Propuesta/src/aqrisk/interfaces/: __init__.py  cli.py
Propuesta/src/aqrisk/processing/: __init__.py  concurrence.py  context.py  coverage.py  normalization.py  persistence.py
Propuesta/src/aqrisk/storage/: __init__.py  history.py
Propuesta/tests/: test_pipeline.py
Recursos/: 1 Distinguir estimación.txt
mdpi/: README.md  checklist_revision.md
(+354 files in other folders)
