[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aqrisk"
version = "0.1.0"
description = "Modulo de monitoreo de calidad del aire con AQI y evaluacion difusa"
requires-python = ">=3.12"
authors = [
  { name = "Homero Velastegui / Codex" }
]
dependencies = []

[project.scripts]
aqrisk = "aqrisk.interfaces.cli:main"
aqrisk-api = "aqrisk.api.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
